--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
   </div>
 
   <script src="src/script.js"></script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5593915309329672"
+     crossorigin="anonymous"></script>
 </body>
 </html>
