--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     </div>
 
     <div id="time">
-      <div style="--clr:#04fc43" id="hour">00</div>
+      <div style="--clr:#ff2972" id="hour">00</div>
       <div style="--clr:#fee800" id="minutes">00</div>
-      <div style="--clr:#ff2972" id="seconds">00</div>
+      <div style="--clr:#04fc43" id="seconds">00</div>
       <div id="ampm">AM</div>
     </div>
   </div>
