--- a/index.html
+++ b/index.html
@@ -1,49 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="src/styles.css">
-</head>
-<body>
-  <div class="container">
-    <div class="clock">
-      <div class="circle" id="sc" style="--clr:#04fc43">
-        <i></i>
-      </div>
-      <div class="circle circle2" id="mn" style="--clr:#fee800">
-        <i></i>
-      </div>
-      <div class="circle circle3" id="hr" style="--clr:#ff2972">
-        <i></i>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="src/styles.css" />
+
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5593915309329672"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <!-- ad1 -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-5593915309329672"
+      data-ad-slot="7238080479"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
+    <div class="container">
+      <div class="clock">
+        <div class="circle" id="sc" style="--clr: #04fc43">
+          <i></i>
+        </div>
+        <div class="circle circle2" id="mn" style="--clr: #fee800">
+          <i></i>
+        </div>
+        <div class="circle circle3" id="hr" style="--clr: #ff2972">
+          <i></i>
+        </div>
+
+        <span style="--i: 1"><b>1</b></span>
+        <span style="--i: 2"><b>2</b></span>
+        <span style="--i: 3"><b>3</b></span>
+        <span style="--i: 4"><b>4</b></span>
+        <span style="--i: 5"><b>5</b></span>
+        <span style="--i: 6"><b>6</b></span>
+        <span style="--i: 7"><b>7</b></span>
+        <span style="--i: 8"><b>8</b></span>
+        <span style="--i: 9"><b>9</b></span>
+        <span style="--i: 10"><b>10</b></span>
+        <span style="--i: 11"><b>11</b></span>
+        <span style="--i: 12"><b>12</b></span>
       </div>
 
-      <span style="--i:1;"><b>1</b></span>
-      <span style="--i:2;"><b>2</b></span>
-      <span style="--i:3;"><b>3</b></span>
-      <span style="--i:4;"><b>4</b></span>
-      <span style="--i:5;"><b>5</b></span>
-      <span style="--i:6;"><b>6</b></span>
-      <span style="--i:7;"><b>7</b></span>
-      <span style="--i:8;"><b>8</b></span>
-      <span style="--i:9;"><b>9</b></span>
-      <span style="--i:10;"><b>10</b></span>
-      <span style="--i:11;"><b>11</b></span>
-      <span style="--i:12;"><b>12</b></span>
+      <!-- ad1 -->
+      <ins
+        class="adsbygoogle"
+        style="display: block"
+        data-ad-client="ca-pub-5593915309329672"
+        data-ad-slot="7238080479"
+        data-ad-format="auto"
+        data-full-width-responsive="true"
+      ></ins>
+
+      <div id="time">
+        <div style="--clr: #ff2972" id="hour">00</div>
+        <div style="--clr: #fee800" id="minutes">00</div>
+        <div style="--clr: #04fc43" id="seconds">00</div>
+        <div id="ampm">AM</div>
+      </div>
     </div>
 
-    <div id="time">
-      <div style="--clr:#ff2972" id="hour">00</div>
-      <div style="--clr:#fee800" id="minutes">00</div>
-      <div style="--clr:#04fc43" id="seconds">00</div>
-      <div id="ampm">AM</div>
-    </div>
-  </div>
+    <!-- ad1 -->
+    <ins
+      class="adsbygoogle"
+      style="display: block"
+      data-ad-client="ca-pub-5593915309329672"
+      data-ad-slot="7238080479"
+      data-ad-format="auto"
+      data-full-width-responsive="true"
+    ></ins>
 
-  <script src="src/script.js"></script>
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5593915309329672"
-     crossorigin="anonymous"></script>
-</body>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
+    <script src="src/script.js"></script>
+  </body>
 </html>
