--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <!-- ad1 -->
     <ins
-      class="adsbygoogle"
+      class="ADSENSE"
       style="display: block"
       data-ad-client="ca-pub-5593915309329672"
       data-ad-slot="7238080479"
@@ -51,7 +51,7 @@
 
       <!-- ad1 -->
       <ins
-        class="adsbygoogle"
+        class="ADSENSE"
         style="display: block"
         data-ad-client="ca-pub-5593915309329672"
         data-ad-slot="7238080479"
@@ -69,7 +69,7 @@
 
     <!-- ad1 -->
     <ins
-      class="adsbygoogle"
+      class="ADSENSE"
       style="display: block"
       data-ad-client="ca-pub-5593915309329672"
       data-ad-slot="7238080479"
